dataset1235/2025-2/805158916/users/2689107057/executions/1584167357_997093868.log
== SUBMISSION (2025-08-27 14:25:15)
-- CODE: 
a = float(input("primeiro numero: "))
b = float(input("segundo numero: "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
primeiro numero: segundo numero: 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
primeiro numero: segundo numero: 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
primeiro numero: segundo numero: 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
primeiro numero: segundo numero: 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
primeiro numero: segundo numero: 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
primeiro numero: segundo numero: 108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:25:45)
-- CODE: 
a = int(input("primeiro numero: "))
b = int(input("segundo numero: "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
primeiro numero: segundo numero: 20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
primeiro numero: segundo numero: 5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
primeiro numero: segundo numero: 68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
primeiro numero: segundo numero: 185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
primeiro numero: segundo numero: 44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
primeiro numero: segundo numero: 108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:24:48)
-- CODE: 
a = float(input("primeiro numero"))
b = float(input("segundo numero"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
primeiro numerosegundo numero20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
primeiro numerosegundo numero5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
primeiro numerosegundo numero68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
primeiro numerosegundo numero185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
primeiro numerosegundo numero44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
primeiro numerosegundo numero108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:25:54)
-- CODE: 
a = int(input("primeiro numero: "))
b = int(input("segundo numero: "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
primeiro numero: segundo numero: 20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
primeiro numero: segundo numero: 5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
primeiro numero: segundo numero: 68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
primeiro numero: segundo numero: 185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
primeiro numero: segundo numero: 44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
primeiro numero: segundo numero: 108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:24:36)
-- CODE: 
a = float(input("primeiro numero)")
b = float(input("segundo numero"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = float(input("primeiro numero)")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = float(input("primeiro numero)")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = float(input("primeiro numero)")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = float(input("primeiro numero)")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = float(input("primeiro numero)")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = float(input("primeiro numero)")
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
